# PRRadar

./: .gitignore  .xcuitest-config.json  CLAUDE.md  FFDataFormatter.h  FFNetworkClient.h  PRRadarMac.entitlements  README.md  TestService.h  UserProfileService.h  agent.sh  pyproject.toml  requirements.txt
.claude/: settings.json  settings.local.json  xcuitest-notes.md
.claude-plugin/: marketplace.json
.claude/commands/: plan-pr-radar.md  pr-radar-verify-work.md
.github/workflows/: claude-code-review-mention.yml  claude-code-review.yml  pr-radar-mention.yml  pr-radar.yml
PRRadar/: PRRadarApp.swift
PRRadar.xcodeproj/: project.pbxproj
PRRadarLibrary/: .gitignore  Package.swift
PRRadarLibrary/bridge/: claude_bridge.py
PRRadarLibrary/claude-agent/: claude_agent.py
PRRadarMac/PRRadarMac.xcodeproj/: project.pbxproj
PRRadarMacSDK/: Package.resolved  Package.swift
PRRadarMacUITests/: PRRadarMacUITests.swift  PRRadarMacUITestsLaunchTests.swift
docs/: ROADMAP.md  SKILL.md  ci-setup.md  posting-comments.md  template.md
pr-radar-mac/: Package.swift
prradar/: __init__.py  __main__.py  handle-mention
rules/: README.md
scripts/: daily-review.sh  handle_comment_action.py  post_review_comments.py
src/: test-service.ts
test-files/: FFCacheManager.h  FFLogger.h
tests/: __init__.py  test_agent_commands.py  test_agent_outputs.py  test_diff_parser.py  test_diff_provider_factory.py  test_diff_source.py  test_focus_type.py  test_git_operations_service.py  test_github_repo.py  test_local_git_repo.py  test_phase_sequencer.py  test_report.py  test_services.py
(+744 files in other folders)
