[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prradar"
version = "1.0.0"
description = "AI-powered pull request review tool with rule-based analysis"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk",
    "pyyaml",
]

[project.scripts]
prradar = "prradar.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["prradar*"]
